--- a/components/resume-tpm/resume-tpm.css
+++ b/components/resume-tpm/resume-tpm.css
@@ -178,9 +178,9 @@
 
 .resume-page ul {
     margin: 0;
-    margin-left: 0.3in;
-    padding-left: 20px;
-    padding-right: 20px;
+    margin-left: 0.15in;
+    padding-left: 14px;
+    padding-right: 15px;
     font-size: 9.5pt;
     page-break-before: avoid;
 }
