--- a/components/resume/resume-v3.css
+++ b/components/resume/resume-v3.css
@@ -365,7 +365,7 @@
     content: '';
     position: absolute;
     left: 5px;
-    top: 6.5px;
+    top: 7px;
     width: 2.5px;
     height: 2.5px;
     border-radius: 50%;
@@ -411,7 +411,7 @@
     content: '';
     position: absolute;
     left: 5px;
-    top: 6.5px;
+    top: 7px;
     width: 2.5px;
     height: 2.5px;
     border-radius: 50%;
@@ -446,7 +446,7 @@
     content: '';
     position: absolute;
     left: 0;
-    top: 5.5px;
+    top: 6.5px;
     width: 5px;
     height: 5px;
     background: var(--v3-highlight);
